[gd_scene load_steps=5 format=2]

[ext_resource path="res://tileset.tres" type="TileSet" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Welcome.gd" type="Script" id=3]
[ext_resource path="res://ExitDoor.tscn" type="PackedScene" id=17]

[node name="World" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 70, 70 )
format = 1
tile_data = PoolIntArray( 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 65537, 0, 0, 65547, 0, 0, 131073, 0, 0, 131078, 0, 0, 131083, 0, 0, 196609, 0, 0, 196619, 0, 0, 262145, 3, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 1, 0, 262155, 0, 0, 327689, 0, 0, 327691, 0, 0, 393225, 0, 0, 393227, 0, 0, 458761, 0, 0, 458763, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 589831, 0, 0, 589837, 0, 0, 655367, 0, 0, 655373, 0, 0, 720903, 0, 0, 720909, 0, 0, 786439, 0, 0, 786445, 0, 0, 851975, 0, 0, 851976, 0, 0, 851980, 0, 0, 851981, 0, 0, 917512, 0, 0, 917516, 0, 0, 983048, 0, 0, 983052, 0, 0, 1048584, 0, 0, 1048588, 0, 0, 1114120, 0, 0, 1114124, 0, 0, 1179655, 0, 0, 1179661, 0, 0, 1245191, 0, 0, 1245197, 0, 0, 1310727, 0, 0, 1310733, 3, 0, 1310734, 2, 0, 1310735, 2, 0, 1310736, 2, 0, 1310737, 2, 0, 1310738, 1, 0, 1376263, 0, 0, 1376274, 0, 0, 1441799, 0, 0, 1441810, 0, 0, 1507335, 0, 0, 1507346, 0, 0, 1572871, 0, 0, 1572872, 0, 0, 1572873, 0, 0, 1572882, 0, 0, 1638409, 3, 0, 1638410, 2, 0, 1638411, 2, 0, 1638412, 2, 0, 1638413, 2, 0, 1638414, 2, 0, 1638415, 2, 0, 1638416, 2, 0, 1638417, 2, 0, 1638418, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 245, 175 )

[node name="ExitDoor" parent="." instance=ExtResource( 17 )]
position = Vector2( 1190, 1645 )
next_level = "res://World2.tscn"

[node name="Welcome" type="RichTextLabel" parent="."]
margin_left = 210.0
margin_top = 105.0
margin_right = 455.0
margin_bottom = 140.0
text = "Welcome to the game"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeToDisplay" type="Timer" parent="Welcome"]
wait_time = 3.0

[node name="FadeOut" type="Tween" parent="Welcome"]

[node name="FadeIn" type="Tween" parent="Welcome"]
